Lagt til paginering på avtaler. Mye refaktorering da de fleste metodene som henter mange avtaler måtte endres